cli/tests/snapshots/pipeline_negative__pipeline_negative_atomic_requires_unsafe.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Warning: Axiom 'interior_mutable' declared (unsafe: interior_mutable)
- Warning: Axiom 'may_panic_on_borrow_violation' declared (unsafe: may_panic_on_borrow_violation)
- Warning: Axiom 'concurrency_primitive' declared (unsafe: concurrency_primitive)
- Warning: Axiom 'atomic_primitive' declared (unsafe: atomic_primitive)
- Warning: Axiom 'indexable' declared (unsafe: indexable)
- Warning: Inductive 'Atomic' depends on axioms: atomic_primitive (unsafe: atomic_primitive)
- Error: [K0023] Environment error defining 'uses_atomic': Definition 'uses_atomic' depends on unsafe axioms: atomic_primitive. Mark it noncomputable or unsafe. RefCell/Mutex/Atomic are not yet available in safe code; runtime checks are unimplemented
