cli/tests/snapshots/pipeline_negative__pipeline_negative_borrow_escape_through_call.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Warning: Axiom 'interior_mutable' declared (unsafe: interior_mutable)
- Warning: Axiom 'may_panic_on_borrow_violation' declared (unsafe: may_panic_on_borrow_violation)
- Warning: Axiom 'concurrency_primitive' declared (unsafe: concurrency_primitive)
- Warning: Axiom 'atomic_primitive' declared (unsafe: atomic_primitive)
- Warning: Axiom 'indexable' declared (unsafe: indexable)
- Warning: Primitive 'Shared' declared
- Warning: Primitive 'Mut' declared
- Warning: Primitive 'Ref' declared
- Warning: Primitive 'borrow_shared' declared
- Warning: Primitive 'borrow_mut' declared
- Warning: Definition 'id_ref' depends on primitives: Ref, Shared
- Error: [M203] Borrow error in bad_escape closure 0: borrowed value does not live long enough: local _2 dropped while still borrowed at block 1 statement 3
  help: ensure the borrowed value outlives all references to it
  note: loan issued at block 0 statement 1 (place _2, kind Shared, region '2, holder _3)
  note: region '2 is live at block 1 statement 3 because '2 >= '4 >= '5 >= '1 ('1 is required to be live here)
