cli/tests/snapshots/pipeline_negative__pipeline_negative_copy_instance_requires_unsafe.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: Explicit Copy instances must be declared unsafe: (unsafe instance copy ...)
