cli/tests/snapshots/pipeline_negative__pipeline_negative_fix_in_total_def.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Err
DriverError: ParseValidations(["Expansion(InvalidSyntax(\"def\", \"fix is only allowed in partial definitions\"))"])
Diagnostics:
- Error: [F0102] Declaration parsing error: Expansion(InvalidSyntax("def", "fix is only allowed in partial definitions"))
