cli/tests/snapshots/pipeline_negative__pipeline_negative_fnonce_called_twice.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: [K0021] Environment error defining 'dup_fnonce': Ownership violation [UseAfterMove]: variable 'f' is used after it was moved
