cli/tests/snapshots/pipeline_negative__pipeline_negative_function_kind_annotation_too_small.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Warning: Axiom 'Res' declared
- Error: [F0207] Elaboration error (Value) in 'bad_kind': Annotated function kind Fn is too small; requires FnOnce
