cli/tests/snapshots/pipeline_negative__pipeline_negative_kernel_recheck_bad_fix.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: Kernel re-check failed for 'bad_fix': ExpectedFunction(Ind("Nat", []))
