cli/tests/snapshots/pipeline_negative__pipeline_negative_kernel_recheck_expr_fix_in_type.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: [K0003] Kernel re-check failed for expression: ExpectedFunction(Sort(Zero))
